[gd_scene load_steps=15 format=3 uid="uid://ca4cc1xyc25gm"]

[ext_resource type="PhysicsMaterial" uid="uid://cgwq52o87akpq" path="res://resources/materials/drop_physics_material.tres" id="1_l480l"]
[ext_resource type="Script" uid="uid://e72234veu5ho" path="res://scenes/projectiles/fire_blade_trap_projectile.gd" id="2_l480l"]
[ext_resource type="Texture2D" uid="uid://bujwyohnq6yi4" path="res://assets/textures/fireball_texture.png" id="3_p78su"]
[ext_resource type="Material" uid="uid://cisk8kcrqgw17" path="res://particles/mesh/fontain_fire_material.tres" id="5_p78su"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x6vv3"]
size = Vector3(0.3, 0.2, 0.3)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t0fni"]
gravity = Vector3(0, -1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p78su"]
shading_mode = 0
albedo_color = Color(3, 2, 2, 1)
albedo_texture = ExtResource("3_p78su")
albedo_texture_force_srgb = true

[sub_resource type="PlaneMesh" id="PlaneMesh_arrt6"]
lightmap_size_hint = Vector2i(2, 2)
material = SubResource("StandardMaterial3D_p78su")
size = Vector2(0.03, 0.03)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6w8p"]
shading_mode = 0
albedo_color = Color(3, 2, 2, 1)
albedo_texture = ExtResource("3_p78su")
albedo_texture_force_srgb = true

[sub_resource type="PrismMesh" id="PrismMesh_l480l"]
material = SubResource("StandardMaterial3D_k6w8p")
size = Vector3(0.3, 0.2, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_l480l"]
resource_local_to_scene = true
material = ExtResource("5_p78su")
top_radius = 0.1
bottom_radius = 0.1
height = 0.1
radial_segments = 8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l480l"]
height = 0.1
radius = 0.1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l480l"]
emission_shape = 3
emission_box_extents = Vector3(1.5, 0.1, 1.5)
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 2.0
radial_velocity_min = 0.999978
radial_velocity_max = 1.99998
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.999998
radial_accel_max = 5.0

[sub_resource type="PrismMesh" id="PrismMesh_p78su"]
material = ExtResource("5_p78su")
size = Vector3(0.1, 0.1, 0.1)

[node name="FireBladeTrapProjectile" type="RigidBody3D"]
collision_layer = 4
collision_mask = 5123
mass = 2.0
physics_material_override = ExtResource("1_l480l")
continuous_cd = true
script = ExtResource("2_l480l")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0.654902, 1)
omni_range = 1.0
omni_shadow_mode = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_x6vv3")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ProjectileParticles" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 10
one_shot = true
transform_align = 3
process_material = SubResource("ParticleProcessMaterial_t0fni")
draw_pass_1 = SubResource("PlaneMesh_arrt6")

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FireBladeBase" type="MeshInstance3D" parent="."]
mesh = SubResource("PrismMesh_l480l")
skeleton = NodePath("../..")

[node name="FireBladeBase2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 0, 0.1, 0)
mesh = SubResource("PrismMesh_l480l")
skeleton = NodePath("../..")

[node name="Blade" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 1.74846e-07, 1, -4.37114e-08, 0, 7.64274e-15, 1.74846e-07, 1, 0, 0.1, 0)
mesh = SubResource("CylinderMesh_l480l")

[node name="Area3D" type="Area3D" parent="Blade"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.1, 4.37114e-09, 0)
collision_layer = 4
collision_mask = 0
gravity_space_override = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Blade/Area3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("CylinderShape3D_l480l")

[node name="CollisionParticles" type="GPUParticles3D" parent="Blade"]
transform = Transform3D(-4.37114e-08, 1, 7.64276e-15, -1, -4.37114e-08, 1.74846e-07, 1.74846e-07, 2.28699e-20, 1, 0.161253, -7.04858e-09, 3.68783e-21)
emitting = false
amount = 5
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_l480l")
draw_pass_1 = SubResource("PrismMesh_p78su")

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="body_entered" from="Blade/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Blade/Area3D" to="." method="_on_area_3d_body_exited"]
